--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,12 @@ dependencies {
     def glideVersion = "4.13.0"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    //gif
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
+    // recycler view animation
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+
+    // swipe to refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
